<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.lrapp.gliderretrieveskylines.MainActivity">

    <EditText
        android:id="@+id/et_trackingId"
        android:hint="@string/et_pilotID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:onClick="clickBtnUpdate"
        android:id="@+id/btn_update"
        android:text="@string/btn_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_trackingId"/>

    <TextView
        android:id="@+id/txtv_headline_pilotName"
        android:text="@string/txtv_headline_pilotName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_update"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>

    <TextView
        android:id="@+id/txtv_pilotName"
        android:text="@string/txtv_default"
        android:textColor="#000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_below="@id/btn_update"
        android:layout_toRightOf="@id/txtv_headline_pilotName"/>

    <TextView
        android:id="@+id/txtv_headline_hag"
        android:text="@string/txtv_headline_hag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtv_pilotName"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>

    <TextView
        android:id="@+id/txtv_hag"
        android:text="@string/txtv_default"
        android:textColor="#000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtv_pilotName"
        android:layout_toRightOf="@id/txtv_headline_hag"/>

    <TextView
        android:id="@+id/txtv_headline_nearestApt"
        android:text="@string/txtv_headline_nearestApt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtv_hag"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>

    <TextView
        android:id="@+id/txtv_nearestApt"
        android:text="@string/txtv_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtv_hag"
        android:layout_toRightOf="@id/txtv_headline_nearestApt"/>

    <TextView
        android:id="@+id/txtv_headline_pos"
        android:text="@string/txtv_headline_pos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtv_nearestApt"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>

    <TextView
        android:id="@+id/txtv_pos"
        android:text="@string/txtv_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtv_nearestApt"
        android:layout_toRightOf="@id/txtv_headline_pos"/>

    <TextView
        android:id="@+id/txtv_distMe"
        android:text="@string/txtv_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtv_pos"
        android:layout_toRightOf="@id/txtv_headline_distMe"/>

    <TextView
        android:id="@+id/txtv_headline_distMe"
        android:text="@string/txtv_headline_distMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtv_pos"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>


</RelativeLayout>
